Clean up and change HTMLHelp screen to use LSScrollBarUI